# NextFLAP

./: CMakeLists.txt  nextflap.cpp
grounder/: groundedTask.cpp  groundedTask.h  grounder.cpp  grounder.h
heuristics/: evaluator.cpp  evaluator.h  hFF.cpp  hFF.h  hLand.cpp  hLand.h  landmarks.cpp  landmarks.h  numericRPG.cpp  numericRPG.h  rpg.cpp  rpg.h  temporalRPG.cpp  temporalRPG.h
parser/: parsedTask.cpp  parsedTask.h  parser.cpp  parser.h  syntaxAnalyzer.cpp  syntaxAnalyzer.h
planner/: intervalCalculations.cpp  intervalCalculations.h  linearizer.cpp  linearizer.h  plan.cpp  plan.h  planBuilder.cpp  planBuilder.h  planComponents.cpp  planComponents.h  planEffects.cpp  planEffects.h  planner.cpp  planner.h  plannerSetting.cpp  plannerSetting.h  printPlan.cpp  printPlan.h  selector.cpp  selector.h  state.cpp  state.h  successors.cpp  successors.h  z3Checker.cpp  z3Checker.h
preprocess/: preprocess.cpp  preprocess.h  preprocessedTask.cpp  preprocessedTask.h
sas/: mutexGraph.cpp  mutexGraph.h  sasTask.cpp  sasTask.h  sasTranslator.cpp  sasTranslator.h
utils/: priorityQueue.h
